--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -6,8 +6,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
+    <ProjectReference Include="..\FileRepository\FileRepository.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
-    <ProjectReference Include="..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\Repository\FileRepository.csproj" />
   </ItemGroup>
 
 </Project>
