--- a/GraphicEditor/GraphicEditor.csproj
+++ b/GraphicEditor/GraphicEditor.csproj
@@ -55,6 +55,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Building1FloorPlan.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Building2FloorPlan.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="FloorsMap.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -70,6 +78,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Building1FloorPlan.xaml.cs">
+      <DependentUpon>Building1FloorPlan.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Building2FloorPlan.xaml.cs">
+      <DependentUpon>Building2FloorPlan.xaml</DependentUpon>
     </Compile>
     <Compile Include="FloorsMap.xaml.cs">
       <DependentUpon>FloorsMap.xaml</DependentUpon>
