--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySQLConnectionString": "server=localhost;port=3306;database=webdatabase;user=root;password=root"
+  } 
 }
