--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySQLConnectionString": "server=localhost;port=3306;database=webdatabase;user=root;password=root"
-  } 
+    "MySqlConnectionString": "server=localhost;port=3306;database=newdb;user=root;password=root"
+  }
 }
