--- a/WebApplication/Properties/launchSettings.json
+++ b/WebApplication/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "feedback",
+      "launchUrl": "api/feedback",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "WebApplication": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "feedback",
+      "launchUrl": "api/feedback",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
