#sitne izmene u xaml kodu za spratove

--- a/GraphicEditor/GraphicEditor.csproj
+++ b/GraphicEditor/GraphicEditor.csproj
@@ -55,11 +55,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\Building1\Building1FloorPlan.xaml">
+    <Page Include="View\Building1\Building1GroundFloorPlan.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Building2\Building2FloorPlan.xaml">
+    <Page Include="View\Building2\Building2GroundFloorPlan.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -75,11 +75,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="View\Building1\Building1FloorPlan.xaml.cs">
-      <DependentUpon>Building1FloorPlan.xaml</DependentUpon>
+    <Compile Include="View\Building1\Building1GroundFloorPlan.xaml.cs">
+      <DependentUpon>Building1GroundFloorPlan.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Building2\Building2FloorPlan.xaml.cs">
-      <DependentUpon>Building2FloorPlan.xaml</DependentUpon>
+    <Compile Include="View\Building2\Building2GroundFloorPlan.xaml.cs">
+      <DependentUpon>Building2GroundFloorPlan.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\HospitalMap.xaml.cs">
       <DependentUpon>HospitalMap.xaml</DependentUpon>
