Started working on the feature

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MySqlConnectionString": "server=localhost;port=3306;database=newdb;user=root;password=root"
-  }
+    "ConnectionStrings": {
+        "MySqlConnectionString": "server=localhost;port=3306;database=newdb;user=root;password=asgkagagdml456+"
+    }
 }
