--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MySqlConnectionString": "server=localhost;port=3306;database=newdb;user=root;password=asgkagagdml456+"
+        "MySqlConnectionString": "server=localhost;port=3306;database=newdb;user=root;password=root"
     }
 }
