Ubačeni prozori dodatnih informacija za ordinacije i pomocne prostorije, i sve sobe povezane sa svojim odgovarajucim prozorima

--- a/GraphicEditor/GraphicEditor.csproj
+++ b/GraphicEditor/GraphicEditor.csproj
@@ -55,6 +55,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="View\AdditionalInformationAuxiliaryRoom.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AdditionalInformationExaminationRoom.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\AdditionalInformationOperaingRoom.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -115,6 +123,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="View\AdditionalInformationAuxiliaryRoom.xaml.cs">
+      <DependentUpon>AdditionalInformationAuxiliaryRoom.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\AdditionalInformationExaminationRoom.xaml.cs">
+      <DependentUpon>AdditionalInformationExaminationRoom.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\AdditionalInformationOperaingRoom.xaml.cs">
       <DependentUpon>AdditionalInformationOperaingRoom.xaml</DependentUpon>
     </Compile>
@@ -197,12 +211,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\Building1\arrowDown.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Logo.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\Building2\arrowDown.png" />
