Basic Database setup

--- a/PharmacyIntegration/appsettings.json
+++ b/PharmacyIntegration/appsettings.json
@@ -8,6 +8,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        
+        "MySqlConnectionString" : "Server=localhost;port=3306;Database=pharmacydb;user=root;password=root"
     }
 }
