--- a/GraphicEditor/GraphicEditor.csproj
+++ b/GraphicEditor/GraphicEditor.csproj
@@ -7,6 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="WhiteLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Resource Include="View\Building1\arrowUp.png" />
   </ItemGroup>
   <ItemGroup>
@@ -17,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\Building2\arrowUp.png" />
+    <Resource Include="WhiteLogo.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
