:construction: Moved MedicalRecords, Medications, Examinations to Backend

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Rooms\" />
+    <Compile Remove="Rooms\**" />
+    <EmbeddedResource Remove="Rooms\**" />
+    <None Remove="Rooms\**" />
   </ItemGroup>
 
 </Project>
