:construction: Addded controllers and file repositories for Medications, Records and Examinations

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -29,4 +29,10 @@
     <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Examinations\Repository\MySqlRepository\" />
+    <Folder Include="Medications\Repository\MySqlRepository\" />
+    <Folder Include="Records\Repository\MySqlRepository\" />
+  </ItemGroup>
+
 </Project>
