--- a/WebApplicationService/WebApplicationService.csproj
+++ b/WebApplicationService/WebApplicationService.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Backend\Backend.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="RecordsService\" />
+  </ItemGroup>
+
 </Project>
