--- a/GraphicEditor/GraphicEditor.csproj
+++ b/GraphicEditor/GraphicEditor.csproj
@@ -7,23 +7,27 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="WhiteLogo.png" />
+    <None Remove="appsettings.Development.json" />
+    <None Remove="appsettings.json" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="View\Building1\arrowUp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Building1\arrowDown.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Building2\arrowDown.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="View\Building2\arrowUp.png" />
-    <Resource Include="WhiteLogo.png" />
+    <Content Include="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="View\Building1\" />
+    <Folder Include="View\Building2\" />
   </ItemGroup>
 </Project>
