--- a/MedbayTechUnitTests/MedbayTechUnitTests.csproj
+++ b/MedbayTechUnitTests/MedbayTechUnitTests.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="Shouldly" Version="4.0.1" />
+	<PackageReference Include="xunit" Version="2.4.0" />
+	<PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+	<PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
