:boom: Added MedicationUsageReport and started MedicationUsageReportTests

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj" />
     <ProjectReference Include="..\PharmacyIntegration\PharmacyIntegration.csproj" />
   </ItemGroup>
 
