:sparkles: Implemented doctor service, controller and repository

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\Examinations\" />
+    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
 </Project>
