--- a/RabbitMQService/RabbitMQService.csproj
+++ b/RabbitMQService/RabbitMQService.csproj
@@ -20,6 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PharmacyIntegration\PharmacyIntegration.csproj" />
+    <ProjectReference Include="..\Backend\Backend.csproj" />
   </ItemGroup>
 </Project>
