:card_file_box: changed password in connection string

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MySqlConnectionString": "server=localhost;port=3306;database=newdb3;user=root;password=root"
+        "MySqlConnectionString": "server=localhost;port=3306;database=newdb3;user=root;password=asgkagagdml456+"
     }
 }
