--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
@@ -25,6 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="MailService\MailTemplate\" />
+    <Folder Include="TokenService\" />
     <Folder Include="Resources\Images\" />
   </ItemGroup>
 
