--- a/MedbayTechUnitTests/MedbayTechUnitTests.csproj
+++ b/MedbayTechUnitTests/MedbayTechUnitTests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
   </ItemGroup>
 
 </Project>
