:whale: changed dockerfile for backend

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster-slim
 
 RUN groupadd -g 999 appuser && \
     useradd -r -u 999 -g appuser appuser
