--- a/PharmacyIntegration/vueclient/package.json
+++ b/PharmacyIntegration/vueclient/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "v-calendar": "^2.1.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
     "vue-router": "^3.4.9",
