--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,13 +1,12 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1.5 
 
 RUN groupadd -g 999 appuser && \
     useradd -r -u 999 -g appuser appuser
 User appuser
 
-
 WORKDIR /app
 
-COPY ./Backend/Backend.csproj .
+COPY ./Backend/bin/Release/netcoreapp3.1/ .
 
 EXPOSE 5000
 
