:lipstick: Redesigned medication usage report front

--- a/MedbayTechUnitTests/MedbayTechUnitTests.csproj
+++ b/MedbayTechUnitTests/MedbayTechUnitTests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\PharmacyIntegration\PharmacyIntegration.csproj" />
   </ItemGroup>
 
 </Project>
