--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201129214050_petnaesta.cs" />
+    <Compile Remove="Migrations\20201129214050_petnaesta.Designer.cs" />
+    <Compile Remove="Migrations\20201129214202_petnaesta.cs" />
+    <Compile Remove="Migrations\20201129214202_petnaesta.Designer.cs" />
+    <Compile Remove="Migrations\20201130131538_petnaesta.cs" />
+    <Compile Remove="Migrations\20201130131538_petnaesta.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
