:bug: Resolve conflicts and bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'newdb'
+      MYSQL_DATABASE: 'newdb4'
         # So you don't have to use root, but you can if you like
       MYSQL_USER: 'root'
         # You can use whatever password you like
@@ -18,12 +18,9 @@ services:
     ports:
         # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
-    expose:
-        # Opens port 3306 on the container
-      - '3306'
         # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
+      - my-db:/var/lib/mysql/data
   Backend:
     build: 
       context: .
@@ -31,10 +28,8 @@ services:
     image: stefan7/medbaytechback:latest-back
     depends_on:
       - db
-    expose: 
-      - "3306"
     ports:
-      - "5100:3306"
+      - "5000:5000"
 
   WebApplication:
     build: 
