--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -30,6 +30,11 @@
     <ProjectReference Include="..\Backend\Backend.csproj" />
     <ProjectReference Include="..\PharmacyIntegration\PharmacyIntegration.csproj" />
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+
 
 </Project>
