:iphone: Finished frontend form for scheduling appointments

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnectionString": "server=localhost;port=3306;database=newdb5;user=root;password=root"
+    "MySqlConnectionString": "server=localhost;port=3306;database=newdb;user=root;password=root"
   },
 
   "MailSettings": {
