:sparkles: Feature ia grpc client
* :sparkles: Added gRPC Client for Parmacy communication.

* :lipstick: check for medication status

* :bug: Fix gRPC Client message request

* :lipstick: medication availability check, simple gui changes

* :construction: Added PrescrioptionController to get all prescription

* :lipstick: show all prescription

* :lipstick: connecting front with prescription controller

* :construction: Generating prescription file for sharing

* :construction: Implemented sharing prescription with pharmacy with http

* :bug: Showing qr code.

* :bug: Fixed conflicts.

Co-authored-by: radovan-zupunski <rzupunski@gmail.com>

--- a/PharmacyIntegration/PharmacyIntegration.csproj
+++ b/PharmacyIntegration/PharmacyIntegration.csproj
@@ -10,6 +10,15 @@
 	<SonarQubeExclude>true</SonarQubeExclude>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.12.4" />
+    <PackageReference Include="Grpc" Version="2.30.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.30.0" />
+    <PackageReference Include="Grpc.Core" Version="2.30.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.30.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.30.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.9" />
@@ -23,6 +32,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    <PackageReference Include="QRCoder" Version="1.3.9" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
@@ -68,5 +78,9 @@
       </ResolvedFileToPublish>
     </ItemGroup>
   </Target>
+  
+  <ItemGroup>
+    <Protobuf Include="gRPC\Protos\model.proto" GrpcServices="Client" />
+  </ItemGroup>
 
 </Project>
