:whale: Fixed dockerfile for web application

--- a/WebApplication/Properties/launchSettings.json
+++ b/WebApplication/Properties/launchSettings.json
@@ -12,7 +12,7 @@
         "IIS Express": {
             "commandName": "IISExpress",
             "launchBrowser": true,
-            "launchUrl": "api/feedback",
+            "launchUrl": "index.html",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
@@ -20,7 +20,7 @@
         "WebApplication": {
             "commandName": "Project",
             "launchBrowser": true,
-            "launchUrl": "api/feedback",
+            "launchUrl": "index.html",
             "applicationUrl": "http://localhost:8080",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
