:docker: Added dockerfile for ph integration

--- a/PharmacyIntegration/appsettings.json
+++ b/PharmacyIntegration/appsettings.json
@@ -6,8 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "MySqlConnectionString" : "Server=localhost;port=3306;Database=newdb;user=root;password=root"
-    }
+    "AllowedHosts": "*"
+
 }
