--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,43 @@
 version: "3.8"
 
 volumes:
-  my-db:
+  mysql-data:
+  #web-sql:
+
+networks:
+  demo:
+    name: demo
+    driver: bridge
 
 services:
-  db:
-    image: mysql:5.7
+  mysql:
+    image: mysql:latest
+    container_name: mysql
     restart: always
+    networks:
+      - demo
     environment:
-      MYSQL_DATABASE: 'newdb4'
-        # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'root'
-        # You can use whatever password you like
-      MYSQL_PASSWORD: 'root'
-        # Password for root access
-      MYSQL_ROOT_PASSWORD: 'root'
-    ports:
-        # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-        # Where our data will be persisted
+      MYSQL_DATABASE: "newdb"
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: "root"
+      MYSQL_ROOT_PASSWORD: "root"
     volumes:
-      - my-db:/var/lib/mysql/data
-  Backend:
-    build: 
-      context: .
-      dockerfile: Backend/Dockerfile
-    image: stefan7/medbaytechback:latest-back
-    depends_on:
-      - db
-    ports:
-      - "5000:5000"
+      - mysql-data:/var/lib/mysql:rw
 
-  WebApplication:
-    build: 
-      context: .
-      dockerfile: WebApplication/Dockerfile
-    image: stefan7/medbaytechweb:latest-web
-    depends_on:
-      - Backend
-    expose: 
-      - "3306"
+
+  PhIntegrationSql:
+    image: ph
+    container_name: phintegration
+    restart: on-failure
+    environment:
+      PORT: 50202
+      DATABASE_USERNAME: "root"
+      DATABASE_PASSWORD: "root"
+      DATABASE_HOST: "mysql"
+      DATABASE_SCHEMA: "newdb"
     ports:
-      - "3306:3306"
+      - "8091:50202"
+    networks:
+      - demo
+    depends_on:
+      - mysql
