--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -6,8 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <Compile Remove="Examinations\WebApiService\**" />
     <Compile Remove="Users\dsadsa\**" />
+    <EmbeddedResource Remove="Examinations\WebApiService\**" />
     <EmbeddedResource Remove="Users\dsadsa\**" />
+    <None Remove="Examinations\WebApiService\**" />
     <None Remove="Users\dsadsa\**" />
   </ItemGroup>
   <ItemGroup>
@@ -29,12 +32,14 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Npgsql" Version="5.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
+    
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.3" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Examinations\WebApiService\" />
     <Folder Include="Exceptions\Examinations\" />
     <Folder Include="Resources\Images\" />
     <Folder Include="Schedules\Controller\" />
