--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -29,6 +29,13 @@
     <Folder Include="MailService\MailTemplate\" />
     <Folder Include="Resources\Images\Default\" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Content Include="Resources\Images\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="MailService\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
