--- a/Dockerfile.Web
+++ b/Dockerfile.Web
@@ -26,6 +26,10 @@ COPY . .
 FROM build AS publish
 WORKDIR /app/Backend
 
+ENV PATH $PATH:/root/.dotnet/tools
+RUN dotnet tool install -g dotnet-ef --version 3.1.9
+RUN dotnet ef migrations add Init
+
 WORKDIR /app
 RUN dotnet publish WebApplication/WebApplication.csproj -c Release -o out
 
