--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,21 +39,86 @@ services:
     volumes:
       - postgres-data:/var/lib/postgres
 
-  WebApplicationSql:
+  IntegrationTestsSql:
+    build: 
+      context: .
+      dockerfile: Dockerfile.IntegrationTests
+    image: test
+    depends_on:
+      - mysql
+    restart: on-failure
+    environment:
+      DATABASE_USERNAME: "root"
+      DATABASE_PASSWORD: "root"
+      DATABASE_HOST: "mysql"
+      DATABASE_SCHEMA: "newdb"
+      STAGE: "test"
+    expose: 
+      - "80"
+    networks: 
+      - demo
+
+  WebApplicationMySql:
     image: web
     restart: on-failure
     networks:
       - demo
     depends_on:
-      - postgres
+      - mysql
     environment:
       DATABASE_USERNAME: "root"
       DATABASE_PASSWORD: "root"
-      DATABASE_HOST: "postgres"
-      DATABASE_SCHEMA: "mydb1"
-      DATABASE_URL: "postgres://root:root@postgres:5432/mydb1"
-      DATABASE_CONNECTION_STRING: "Server=postgres;Port=5432;Database=mydb1;User Id=root;Password=root"
-      PORT: 8080
-      STAGE: "testing"
+      DATABASE_HOST: "mysql"
+      DATABASE_SCHEMA: "newdb"
+      PORT: 8085
+      STAGE: "test"
     ports:
-      - "8080:8080"
+      - "8085:8085"
+
+#  PhIntegration:
+#    build: 
+#      context: .
+#      dockerfile: Dockerfile.PhIntegration
+#    image: ph-integration
+#    restart: on-failure
+#    networks:
+#      - demo
+#    depends_on:
+#      - mysql
+#    environment:
+#      DATABASE_USERNAME: "root"
+#      DATABASE_PASSWORD: "root"
+#      DATABASE_HOST: "mysql"
+#      DATABASE_SCHEMA: "newdb"
+#      STAGE: "test"
+#      PORT: 8081
+#    ports:
+#      - "8081:8081"
+
+  GraphicEditorWebServer:
+    build: 
+      context: .
+      dockerfile: Dockerfile.GraphicEditor
+    image: graphic-editor
+    restart: on-failure
+    networks:
+      - demo
+    depends_on:
+      - mysql
+    environment:
+      DATABASE_USERNAME: "root"
+      DATABASE_PASSWORD: "root"
+      DATABASE_HOST: "mysql"
+      DATABASE_SCHEMA: "newdb"
+      STAGE: "test"
+      PORT: 8082
+    ports:
+      - "8082:8082"
+
+  UnitTests:
+    build: 
+      context: .
+      dockerfile: Dockerfile.UnitTests
+    image: unit-tests
+    container_name: unit-tests-container
+    restart: on-failure
